added background to sections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-      <section>
+      <section class="projects">
         <h2>Featured Projects</h2>
         <p> 💻 All of my projects are available at  <a href="https://github.com/Sarthak-Sethi?tab=repositories">Sarthak Sethi GITHUB</a>.</p>
 
@@ -52,7 +52,7 @@ The principles are curated in such a way so that you are able to understand thes
         <!-- End of Project block. -->
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
-      <section>
+      <section class="workexp">
         <h2>Work Experience</h2>
 
         <!-- Copy this whole <section> block to add more jobs. -->
@@ -73,20 +73,25 @@ The principles are curated in such a way so that you are able to understand thes
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <section>
+      <section class ="education">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <h3>Guru Nanak Dev University - Amritsar</h3>
+          <p>I am Currently Pursuing B.tech in Electronics and Communication Engineering 2017-2021</p>
+          <p>CGPA 8.57</p>
+        </section>
+        <section>
+          <h3>D.A.V PUBLIC SCHOOL - Amritsar</h3>
+          <p>Completed my genreal studies till 10th</p>
+          <p>Non Medical with physics, chemistry and Mathematics</p>
         </section>
         <!-- End of School block. -->
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
-      <footer>
+      <footer class="contact">
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
