--- a/index.html
+++ b/index.html
@@ -4,78 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarthak Sethi-Resume</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
-        <h1>Sarthak Sethi</h1>
-        <h2>Android || Java || Machine Learning || Web Development</h2>
-        <p>🔭 I’m currently working on Augmented Reality and machine learning
-      <p>🌱 I’m currently learning Junit Docker and springBoot</p>
-      <p>  🤝 I’m looking for help with Sceneform</p>
-      <p>  💬 Ask me about Android app , Java , Data Structures , Augmented Reality Python , Machine Learning SpringBoot ,
-         Docker Image processing , Deep Learning</p>
-
+        <div class="content-wrap">
+          <h1><em>Sarthak Sethi</em></h1>
+          <h2>Android || Java || Machine Learning || Web Development</h2>
+          <p>🔭 I’m currently working on Augmented Reality and machine learning
+          <p>🌱 I’m currently learning Junit Docker and springBoot</p>
+          <p>  🤝 I’m looking for help with Sceneform</p>
+          <p>  💬 Ask me about Android app , Java , Data Structures , Augmented Reality Python , Machine Learning SpringBoot ,
+           Docker Image processing , Deep Learning</p>
+        </div>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class="projects">
-        <h2>Featured Projects</h2>
-        <p> 💻 All of my projects are available at  <a href="https://github.com/Sarthak-Sethi?tab=repositories">Sarthak Sethi GITHUB</a>.</p>
+        <div class="content-wrap">
+            <h2>Featured Projects</h2>
+            <p> 💻 All of my projects are available at  <a href="https://github.com/Sarthak-Sethi?tab=repositories">GITHUB</a>.</p>
 
-        <!-- Copy the whole <section> block to add more projects. -->
-        <section>
-          <h3>Intelligent-Post-Lock-Down-Management-System-for-Public-Transportation</h3>
-          <img src="images/project1.jpeg" alt="image for project 1 Lock-Down-Management-System-for-Public-Transportation">
-          <p>The proposal is to make a mobile application to manage post lock down public transportation. During this pandemic the major risk for the spread can be through the use of public transports ,the application will provide an effective solution for the passengers to board a train at railway . Our idea is to schedule the timing of passengers arrival on the basis of their ticket class , for instance we can have a nominal gap in the arrival time of passengers of the 3.Ac, 2.AC</p>
-          <a href="https://github.com/Sarthak-Sethi/SBSPS-Challenge-506-Intelligent-Post-Lock-Down-Management-System-for-Public-Transportation" target="_blank">View project</a>
-        </section>
+            <!-- Copy the whole <section> block to add more projects. -->
+            <section>
+              <h3>Intelligent-Post-Lock-Down-Management-System-for-Public-Transportation</h3>
+              <img src="images/project1.jpeg" alt="image for project 1 Lock-Down-Management-System-for-Public-Transportation">
+              <p>The proposal is to make a mobile application to manage post lock down public transportation. During this pandemic the major risk for the spread can be through the use of public transports ,the application will provide an effective solution for the passengers to board a train at railway . Our idea is to schedule the timing of passengers arrival on the basis of their ticket class , for instance we can have a nominal gap in the arrival time of passengers of the 3.Ac, 2.AC</p>
+              <a href="https://github.com/Sarthak-Sethi/SBSPS-Challenge-506-Intelligent-Post-Lock-Down-Management-System-for-Public-Transportation" target="_blank">View project</a>
+            </section>
 
-        <section>
-          <h3>Covid slot Booking</h3>
-          <img src="images/project2.png" alt="image for project 2">
-          <p>Application developed for covid patient care which offers different quarantine treatment packages as well facilitates payment through this application . the database is incorporated using MY-SQL</p>
-          <a href="https://github.com/Sarthak-Sethi/CovidSlotBooking" target="_blank">View project</a>
-        </section>
+            <section>
+              <h3>Covid slot Booking</h3>
+              <img src="images/project2.png" alt="image for project 2">
+              <p>Application developed for covid patient care which offers different quarantine treatment packages as well facilitates payment through this application . the database is incorporated using MY-SQL</p>
+              <a href="https://github.com/Sarthak-Sethi/CovidSlotBooking" target="_blank">View project</a>
+            </section>
 
-        <section>
-          <h3>BookDo - Start Living Your Books</h3>
+            <section>
+              <h3>BookDo - Start Living Your Books</h3>
 
-          <img src="images/project3.png" alt="image for project 3">
-          <p>We convert a book's teachings, insights & knowledge into bite-size principles accompanied with a task or as we like to call it -Actionables- for you, so that you not only get the gist of the book but also live your books by practical application of those principles.
-The principles are curated in such a way so that you are able to understand these principles followed by a task. You will be given certain steps on how to complete the task. In this way, you can start living your book, in 10-30 minutes of your time of your daily routine by completing one task at a time i.e. one principle/ one task a day.</p>
-          <a href="https://play.google.com/store/apps/details?id=com.Book.Do.bookdo" target="_blank">View APP on Play Store</a>
-        </section>
+              <img src="images/project3.png" alt="image for project 3">
+              <p>We convert a book's teachings, insights & knowledge into bite-size principles accompanied with a task or as we like to call it -Actionables- for you, so that you not only get the gist of the book but also live your books by practical application of those principles.
+                The principles are curated in such a way so that you are able to understand these principles followed by a task. You will be given certain steps on how to complete the task. In this way, you can start living your book, in 10-30 minutes of your time of your daily routine by completing one task at a time i.e. one principle/ one task a day.</p>
+              <a href="https://play.google.com/store/apps/details?id=com.Book.Do.bookdo" target="_blank">View APP on Play Store</a>
+            </section>
+        </div>
         </section>
         <!-- End of Project block. -->
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="workexp">
-        <h2>Work Experience</h2>
+          <div class="content-wrap">
+            <h2>Work Experience</h2>
+            <!-- Copy this whole <section> block to add more jobs. -->
+            <section>
+              <h3>Job title</h3>
+              <p>Company Name</p>
+              <p>Date at job</p>
+              <p>Job summary goes here. Add as many paragraphs as you need.</p>
+              <p>Optional list:</p>
+              <ul>
+                <li>Delete this list if you don't need it.</li>
+                <li>Created...</li>
+                <li>Lead...</li>
+                <li>Responsible for...</li>
+              </ul>
+            </section>
+          </div>
 
-        <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
-        </section>
-        <!-- End of Job block. -->
       </section>
-
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class ="education">
+        <div class="content-wrap">
         <h2>Education</h2>
-
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
           <h3>Guru Nanak Dev University - Amritsar</h3>
@@ -88,19 +95,22 @@ The principles are curated in such a way so that you are able to understand thes
           <p>Non Medical with physics, chemistry and Mathematics</p>
         </section>
         <!-- End of School block. -->
+          </div>
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer class="contact">
+          <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <ul>
           <li><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=er.sarthaksethi@gmail.com" target="_blank">er.sarthaksethi@gmail.com</a></li>
-          <li><a href="https://github.com/Sarthak-Sethi" target="_blank">GITHUB</a></li>
+          <li><a href="https://github.com/Sarthak-Sethi" target="_blank">GitHub</a></li>
           <li><a href="https://www.hackerrank.com/ersarthak" target="_blank">HackerRank</a></li>
           <li><a href="https://www.linkedin.com/in/sarthak-sethi/" target="_blank">LinkedIn</a></li>
         </ul>
+          <div class="content-wrap">
       </footer>
     </main>
     <script type="text/javascript" src="javascript/myscript.js">
